app/assets/stylesheets/pages/note_form.scss
/**
 * Note Form
 */
.comment-btn {
  @extend .btn-create;
}

.diff-file .diff-content {
  tr.line_holder:hover > td .line_note_link {
    opacity: 1.0;
    filter: alpha(opacity = 100);
  }
}

.diff-file,
.discussion {
  .new-note {
    margin: 0;
    border: none;
  }
}

.new-note {
  display: none;
}

.new-note,
.note-edit-form {
  .note-form-actions {
    position: relative;
    margin: $gl-padding 0 0;
  }

  .note-preview-holder {
    > p {
      overflow-x: auto;
    }
  }

  img {
    max-width: 100%;
  }
}

.note-textarea {
  display: block;
  padding: 10px 0;
  color: $gl-text-color;
  font-family: $regular_font;
  border: 0;

  &:focus {
    outline: 0;
  }
}

.note-image-attach {
  @extend .col-md-4;
  margin-left: 45px;
  float: none;
}

.common-note-form {
  .md-area {
    padding: $gl-padding-top $gl-padding;
    border: 1px solid $border-color;
    border-radius: $border-radius-base;
    transition: border-color ease-in-out 0.15s,
                box-shadow ease-in-out 0.15s;

    &.is-focused {
      @extend .form-control:focus;

      .comment-toolbar,
      .nav-links {
        border-color: $focus-border-color;
      }
    }

    &.is-dropzone-hover {
      border-color: $gl-success;
      box-shadow: 0 0 2px $black-transparent,
                  0 0 4px $gl-success-focus;

      .comment-toolbar,
      .nav-links {
        border-color: $gl-success;
      }
    }
  }
}

.md-header .nav-links {
  display: flex;
  display: -webkit-flex;
  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  width: 100%;

  .pull-right {
    // Flexbox quirk to make sure right-aligned items stay right-aligned.
    margin-left: auto;
  }
}

.confidential-issue-text {
  float: left;
}

.confidential-issue-scroll {
  position: fixed;
}

.confidential-issue-warning {
  color: $white-normal;
  background-color: #4c4c4c;
  opacity: 0.8;
  overflow-y:scroll;
  border-radius: 3px;
  padding: 10px;
  margin: auto;
  text-align: center;
  font-size: 14px;
  word-wrap: break-word;

  @media (max-width: $screen-sm-max) {
    // On smaller devices the warning becomes the fourth item in the list,
    // rather than centering, and grows to span the full width of the
    // comment area.
    order: 4;
    -webkit-order: 4;
    margin: 6px auto;
    width: 100%;
  }
}

.discussion-form {
  padding: $gl-padding-top $gl-padding $gl-padding;
  background-color: $white-light;
}

.discussion-notes .disabled-comment {
  padding: 6px 0;
}

.notes-form > li {
  border: 0;
}

.note-edit-form {
  display: none;
  font-size: 14px;

  .md-area {
    background-color: $white-light;
  }
}

.js-note-attachment-delete {
  display: none;
}

.parallel-comment {
  padding: 6px;
}

.error-alert > .alert {
  margin-top: 5px;
  margin-bottom: 5px;

  &.alert-dismissable {
    .close {
      color: $white-light;
      opacity: 0.85;
      font-weight: normal;

      &:hover {
        opacity: 1;
      }
    }
  }
}

.discussion-body,
.diff-file {
  .discussion-reply-holder {
    background-color: $white-light;
    padding: 10px 16px;
  }
}

.discussion-with-resolve-btn {
  display: table;
  width: 100%;
  border-collapse: separate;
  table-layout: auto;

  .btn-group {
    display: table-cell;
    float: none;
    width: 1%;

    &:first-child {
      width: 100%;
      padding-right: 5px;
    }

  }

  .discussion-actions {
    display: table;

    .new-issue-for-discussion path {
      fill: $gray-darkest;
    }

    .btn-group {
      display: table-cell;

      &:first-child {
        padding-right: 0;
      }

      &:first-child:not(:last-child) > div {
        border-right: 0;
      }
    }
  }

  .btn {
    width: 100%;
  }
}

.discussion-notes-count {
  font-size: 16px;
}

.edit_note {
  .markdown-area {
    min-height: 140px;
    max-height: 500px;
  }

  .note-form-actions {
    background: transparent;
  }
}

.comment-toolbar {
  padding-top: $gl-padding-top;
  color: $gl-text-color-secondary;
  border-top: 1px solid $border-color;
}

.md-helper {
  padding-top: 10px;
}

.toolbar-button {
  padding: 0;
  background: none;
  border: 0;
  font-size: 14px;
  line-height: 16px;

  &:hover,
  &:focus {
    color: $gl-link-color;
    outline: 0;
  }

  @media (min-width: $screen-md-min) {
    float: left;
    margin-right: $gl-padding;

    &:last-child {
      float: right;
      margin-right: 0;
    }
  }
}

.toolbar-button-icon {
  position: relative;
  top: 1px;
  margin-right: 3px;
  color: inherit;
  font-size: 16px;
}

.toolbar-text {
  font-size: 14px;
  line-height: 16px;
  margin-top: 2px;

  @media (min-width: $screen-md-min) {
    float: left;
  }
}

.note-form-actions {
  @media (max-width: $screen-xs-max) {
    .btn {
      float: none;
      width: 100%;

      &:not(:last-child) {
        margin-bottom: 10px;
      }
    }
  }
}

.note-edit-warning.settings-message {
  display: none;
  padding: 5px 10px;
  position: absolute;
  left: 127px;
  top: 2px;

  @media (max-width: $screen-xs-max) {
    position: relative;
    top: 0;
    left: 0;
    margin-bottom: 10px;
  }
}

.comment-type-dropdown {
  .comment-btn {
    width: auto;
  }

  .dropdown-toggle {
    float: right;

    .toggle-icon {
      color: $white-light;
      padding-right: 2px;
      margin-top: 2px;
      pointer-events: none;
    }
  }

  .dropdown-menu {
    top: initial;
    bottom: 40px;
    width: 298px;
  }

  .description {
    display: inline-block;
    white-space: normal;
    margin-left: 8px;
    padding-right: 33px;
  }

  li {
    padding-top: 6px;

    & > a {
      margin: 0;
      padding: 0;
      color: inherit;
      border-radius: 0;
      text-overflow: inherit;

      &:hover,
      &:focus {
        background-color: inherit;
        color: inherit;
      }
    }

    &:hover,
    &:focus {
      background-color: $dropdown-hover-color;
      color: $white-light;
    }

    &.droplab-item-selected i {
      visibility: visible;
    }

    i {
      visibility: hidden;
    }
  }

  i {
    display: inline-block;
    vertical-align: top;
    padding-top: 2px;
  }

  .divider {
    margin: 0 8px;
    padding: 0;
    border-top: $gray-darkest;
  }

  @media (max-width: $screen-xs-max) {
    display: flex;
    width: 100%;
    margin-bottom: 10px;

    .comment-btn {
      flex-grow: 1;
      flex-shrink: 0;
      width: auto;
    }

    .dropdown-toggle {
      flex-grow: 0;
      flex-shrink: 1;
      width: auto;
    }
  }
}

.uploading-container {
  float: right;

  @media (max-width: $screen-xs-max) {
    float: left;
    margin-top: 5px;
  }
}

.uploading-error-icon,
.uploading-error-message {
  color: $gl-text-red;
}

.uploading-error-message {
  @media (max-width: $screen-xs-max) {
    &::after {
      content: "\a";
      white-space: pre;
    }
  }
}

.uploading-progress {
  margin-right: 5px;
}

.attach-new-file,
.button-attach-file,
.retry-uploading-link {
  color: $gl-link-color;
  padding: 0;
  background: none;
  border: 0;
  font-size: 14px;
  line-height: 16px;
}

.markdown-selector {
  color: $gl-link-color;
}

